stop footer ad close button falling off the side on narrow screens?

--- a/frontend/css/_base.scss
+++ b/frontend/css/_base.scss
@@ -1530,6 +1530,10 @@ figcaption {
     left: 0;
 }
 
+#stickyAdContainer {
+    white-space: nowrap;
+}
+
 .ad-wrapper {
     text-align: center;
     margin: 1em 0 10px;
